// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Btn renders correctly 1`] = `
<span
  className="wjc-btn undefined sc-bdVaJa kVTdEB"
  onClick={[Function]}
>
  Btn Content
</span>
`;

exports[`Btn should not render as link when \`to\` equal false 1`] = `
<span
  className="wjc-btn undefined sc-bdVaJa kVTdEB"
  onClick={[Function]}
>
  this is not a link
</span>
`;

exports[`Btn should render link when \`to\` has a value not equal false 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "class": "wjc-btn undefined sc-bdVaJa kVTdEB",
    },
    "children": Array [
      Object {
        "data": "this is a link",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "text",
      },
    ],
    "name": "span",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;
